fixed white space for interoduction texts on sections

--- a/src/shared/style/app/_helpers.scss
+++ b/src/shared/style/app/_helpers.scss
@@ -66,3 +66,7 @@
 .bg-soft-red {
 	background-color: #fcc;
 }
+
+.pre-line {
+	white-space: pre-line;
+}
